--- a/SIApps/src/app/app.scss
+++ b/SIApps/src/app/app.scss
@@ -14,3 +14,19 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.toolbar-background {
+	background-color: #0B29FF;
+}
+
+.toolbar-title {
+	color: white;
+}
+
+.bar-button-menutoggle {
+	color: white;
+}
+
+.show-back-button {
+	color: white;
+}
