--- a/SIApps/src/pages/tabs-menu/tabs-menu.scss
+++ b/SIApps/src/pages/tabs-menu/tabs-menu.scss
@@ -1,5 +1,15 @@
 page-tabs-menu {
 	.segment-button{
 		word-wrap: break-word;
+		font-size: 1.0rem!important;
+		white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+		white-space: -pre-wrap;      /* Opera 4-6 */
+		white-space: -o-pre-wrap;    /* Opera 7 */
+		white-space: pre-wrap;       /* css-3 */
+		word-wrap: break-word;       /* Internet Explorer 5.5+ */
+		white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
+		// word-break: break-all;
+		white-space: normal;
+        line-height: normal!important;
 	}
 }
